fix (blog) content align

--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -82,14 +82,20 @@ body {
 }
 
 .ql-align-center {
+  display: flex !important;
+  justify-content: center !important;
   text-align: center !important;
 }
 
 .ql-align-left {
+  display: flex !important;
+  justify-content: left !important;
   text-align: left !important;
 }
 
 .ql-align-right {
+  display: flex !important;
+  justify-content: right !important;
   text-align: right !important;
 }
 
